--- a/index.html
+++ b/index.html
@@ -2,12 +2,57 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Privacy Policy for Clubera</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Clubera Privacy Policy</title>
+  <style>
+    body {
+      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+      line-height: 1.6;
+      max-width: 800px;
+      margin: 0 auto;
+      padding: 20px;
+      color: #333;
+    }
+    h1, h2, h3 {
+      color: #2c3e50;
+    }
+    h1 {
+      border-bottom: 2px solid #3498db;
+      padding-bottom: 10px;
+    }
+    h2 {
+      margin-top: 30px;
+      border-bottom: 1px solid #bdc3c7;
+      padding-bottom: 5px;
+    }
+    ul {
+      padding-left: 20px;
+    }
+    li {
+      margin: 8px 0;
+    }
+    a {
+      color: #3498db;
+      text-decoration: none;
+    }
+    a:hover {
+      text-decoration: underline;
+    }
+    .last-updated {
+      color: #7f8c8d;
+      font-style: italic;
+    }
+    .contact {
+      background: #f9f9f9;
+      padding: 20px;
+      border-radius: 5px;
+      margin: 20px 0;
+    }
+  </style>
 </head>
-<body style="font-family: Arial, sans-serif; line-height: 1.6; padding: 20px; max-width: 800px; margin: auto;">
+<body>
   <h1>Privacy Policy for Clubera</h1>
-  <p><strong>Last updated:</strong> 2025-05-29</p>
+  <p class="last-updated"><strong>Last updated:</strong> 2025-05-29</p>
 
   <h2>Introduction</h2>
   <p>Welcome to Clubera ("we," "our," or "us"). This Privacy Policy explains how we collect, use, disclose, and safeguard your information when you use our mobile application Clubera (the "App"). Please read this Privacy Policy carefully. By using the App, you consent to the practices described in this policy.</p>
@@ -69,7 +114,7 @@
     <li>We use Razorpay for processing payments</li>
     <li>When you make a payment, you will be redirected to Razorpay's secure payment gateway</li>
     <li>Razorpay may collect and store your payment information according to their privacy policy</li>
-    <li>For more information, please visit <a href="https://razorpay.com/privacy/" target="_blank">Razorpay's privacy policy</a></li>
+    <li>For more information, please visit <a href="https://razorpay.com/privacy/">Razorpay's privacy policy</a></li>
   </ul>
 
   <h3>2. Internet Connectivity</h3>
@@ -79,6 +124,7 @@
   </ul>
 
   <h2>Your Rights</h2>
+  <p>You have the right to:</p>
   <ul>
     <li>Access your personal information</li>
     <li>Correct inaccurate data</li>
@@ -93,7 +139,7 @@
     <li>Refund requests will be processed according to our refund policy</li>
     <li>Refunds will be processed through the original payment method</li>
     <li>Processing time may vary depending on your payment provider</li>
-    <li>For refund requests, please contact us at: <a href="mailto:subharticsshit@gmail.com">subharticsshit@gmail.com</a></li>
+    <li>For refund requests, please contact us at: subharticsshit@gmail.com</li>
   </ul>
 
   <h2>Children's Privacy</h2>
@@ -102,9 +148,11 @@
   <h2>Changes to This Privacy Policy</h2>
   <p>We may update our Privacy Policy from time to time. We will notify you of any changes by posting the new Privacy Policy on this page and updating the "Last updated" date.</p>
 
-  <h2>Contact Us</h2>
-  <p>If you have any questions or concerns about this Privacy Policy, please contact us at:</p>
-  <p><strong>Email:</strong> <a href="mailto:subharticsshit@gmail.com">subharticsshit@gmail.com</a></p>
+  <div class="contact">
+    <h2>Contact Us</h2>
+    <p>If you have any questions or concerns about this Privacy Policy, please contact us at:</p>
+    <p><strong>Email:</strong> subharticsshit@gmail.com</p>
+  </div>
 
   <h2>Supported Payment Methods</h2>
   <p>Our app supports various payment methods through Razorpay, including:</p>
