Update Privacy Policy in index.html: Revise introduction, enhance information collection details, add app permissions section, and include contact information for the organization.

--- a/index.html
+++ b/index.html
@@ -55,14 +55,21 @@
   <p class="last-updated"><strong>Last updated:</strong> 2025-05-29</p>
 
   <h2>Introduction</h2>
-  <p>Welcome to Clubera ("we," "our," or "us"). This Privacy Policy explains how we collect, use, disclose, and safeguard your information when you use our mobile application Clubera (the "App"). Please read this Privacy Policy carefully. By using the App, you consent to the practices described in this policy.</p>
+  <p>Welcome to Clubera. The Company (referred to as either "the Company", "We", "Us", "Our" or "I" in this Agreement) refers to Abhinav Swami who is a part of the organisation MAHAYANA THERAVADA VAJRAYANA BUDDHIST RELIGIOUS AND CHARITABLE TRUST, Swami Vivekanand Subharti University Subhartipuram, NH-58, Delhi-Haridwar Bypass Road, Meerut-250005 or the organisation itself.</p>
+
+  <p>This Privacy Policy explains how we collect, use, disclose, and safeguard your information when you use our mobile application Clubera (the "App"). Please read this Privacy Policy carefully. By using the App, you consent to the practices described in this policy.</p>
 
   <h2>Information We Collect</h2>
+
   <h3>1. Account Information</h3>
   <ul>
     <li>Name</li>
-    <li>Email address</li>
+    <li>Mobile number (required for registration and authentication)</li>
+    <li>Email address (optional)</li>
     <li>Profile picture (optional)</li>
+    <li>Address</li>
+    <li>Designation</li>
+    <li>Center, College, and Department information</li>
   </ul>
 
   <h3>2. Usage Data</h3>
@@ -85,6 +92,7 @@
     <li>Payment status</li>
     <li>Order details</li>
   </ul>
+
   <p><strong>Note:</strong> We do not store your credit card information or other payment method details. All payment processing is handled securely by our payment gateway partner, Razorpay.</p>
 
   <h2>How We Use Your Information</h2>
@@ -106,9 +114,11 @@
     <li>Secure data storage</li>
     <li>Regular security audits</li>
   </ul>
+
   <p>However, please be aware that no method of transmission over the internet or electronic storage is 100% secure.</p>
 
   <h2>Third-Party Services</h2>
+
   <h3>1. Payment Processing</h3>
   <ul>
     <li>We use Razorpay for processing payments</li>
@@ -134,28 +144,15 @@
     <li>Dispute any unauthorized transactions</li>
   </ul>
 
-  <h2>Refund Policy</h2>
-  <ul>
-    <li>Refund requests will be processed according to our refund policy</li>
-    <li>Refunds will be processed through the original payment method</li>
-    <li>Processing time may vary depending on your payment provider</li>
-    <li>For refund requests, please contact us at: subharticsshit@gmail.com</li>
-  </ul>
-
   <h2>Children's Privacy</h2>
   <p>Our App does not knowingly collect information from children under 13. If you are a parent or guardian and believe your child has provided us with personal information, please contact us so that we can take appropriate action.</p>
 
   <h2>Changes to This Privacy Policy</h2>
   <p>We may update our Privacy Policy from time to time. We will notify you of any changes by posting the new Privacy Policy on this page and updating the "Last updated" date.</p>
 
-  <div class="contact">
-    <h2>Contact Us</h2>
-    <p>If you have any questions or concerns about this Privacy Policy, please contact us at:</p>
-    <p><strong>Email:</strong> subharticsshit@gmail.com</p>
-  </div>
-
   <h2>Supported Payment Methods</h2>
   <p>Our app supports various payment methods through Razorpay, including:</p>
+
   <h3>UPI</h3>
   <ul>
     <li>Google Pay</li>
@@ -187,5 +184,86 @@
     <li>SSL/TLS encryption</li>
     <li>Data localization compliance as per Indian regulations</li>
   </ul>
+
+  <h2>App Permissions</h2>
+  <p>Our app requires the following permissions to function properly:</p>
+
+  <h3>Device Permissions</h3>
+  <ol>
+    <li>
+      <strong>Internet Access</strong>
+      <ul>
+        <li>Purpose: Required for basic app functionality, connecting to our servers, and processing payments</li>
+        <li>Usage: Sending and receiving data, updates, and notifications</li>
+      </ul>
+    </li>
+    <li>
+      <strong>Network State</strong>
+      <ul>
+        <li>Purpose: To check your internet connectivity status</li>
+        <li>Usage: Ensuring stable connection for app features and payments</li>
+      </ul>
+    </li>
+    <li>
+      <strong>UPI App Access</strong>
+      <ul>
+        <li>Purpose: To enable seamless payments through UPI apps</li>
+        <li>Usage: Opening UPI apps like Google Pay, PhonePe, Paytm, etc. for payment processing</li>
+      </ul>
+    </li>
+  </ol>
+
+  <h3>App Feature Permissions</h3>
+  <p>Based on your user role (User, Incharge, or Admin), you may have access to:</p>
+  <ol>
+    <li>
+      <strong>Club Management</strong>
+      <ul>
+        <li>Adding new clubs (Admin only)</li>
+        <li>Managing existing clubs (Admin and authorized Incharges)</li>
+      </ul>
+    </li>
+    <li>
+      <strong>Notice Board</strong>
+      <ul>
+        <li>Posting notices (Admin and authorized Incharges)</li>
+        <li>Viewing notices (All users)</li>
+      </ul>
+    </li>
+    <li>
+      <strong>Event Management</strong>
+      <ul>
+        <li>Creating events (Admin and authorized Incharges)</li>
+        <li>Participating in events (All users)</li>
+      </ul>
+    </li>
+    <li>
+      <strong>Gallery</strong>
+      <ul>
+        <li>Adding photos to club gallery (Admin and authorized Incharges)</li>
+        <li>Viewing photos (All users)</li>
+        <li>Accessing device gallery for profile picture updates (All users)</li>
+        <li>Managing own profile picture (All users)</li>
+      </ul>
+    </li>
+    <li>
+      <strong>Storage Access</strong>
+      <ul>
+        <li>Read access to device gallery for profile picture selection</li>
+        <li>Temporary storage access for image processing</li>
+      </ul>
+    </li>
+  </ol>
+
+  <p><strong>Note:</strong> All permissions are essential for the core functionality of the app and are used only for their stated purposes.</p>
+
+  <div class="contact">
+    <h2>Contact Us</h2>
+    <p>If you have any questions or concerns about this Privacy Policy, please contact us at:</p>
+    <p><strong>Organization:</strong> MAHAYANA THERAVADA VAJRAYANA BUDDHIST RELIGIOUS AND CHARITABLE TRUST</p>
+    <p><strong>Address:</strong> Swami Vivekanand Subharti University Subhartipuram, NH-58, Delhi-Haridwar Bypass Road, Meerut-250005</p>
+    <p><strong>Email:</strong> subharticsshit@gmail.com</p>
+  </div>
+
 </body>
 </html>
